[+] 补充好友模块 api
